# ANPI_II2018

./: README  RootNewtonRaphson.hpp
Proyecto3/code/: CMakeLists.txt  README.txt
Proyecto3/code/cmake/: AnpiConfig.hpp.in  ExternalLibs.cmake
Proyecto3/code/doc/: Doxyfile.in
Proyecto3/code/doc/html/: Allocator_8hpp_source.html  AnpiConfig_8hpp_source.html  Exception_8hpp_source.html  FileParser_8cpp.html  HasType_8hpp_source.html  Intrinsics_8hpp_source.html  Matrix_8hpp_source.html  PlotPy_8hpp_source.html  Proyecto3_8cpp.html  annotated.html  classanpi_1_1Exception-members.html  classanpi_1_1Exception.html  classanpi_1_1Matrix-members.html  classanpi_1_1Matrix.html  classanpi_1_1Plot2d-members.html  classanpi_1_1Plot2d.html  classanpi_1_1aligned__allocator.html  classanpi_1_1aligned__row__allocator-members.html  classanpi_1_1aligned__row__allocator.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_enum.html  globals_eval.html  globals_func.html  hierarchy.html  index.html  menudata.js  namespaceanpi.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  structanpi_1_1Matrix_1_1__Matrix__impl-members.html  (+13 more)
Proyecto3/code/doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_b.js  functions_c.js  (+8 more)
Proyecto3/code/include/: AnpiConfig.hpp  CubicTracers.cpp  Matrix.hpp  liebmann.cpp  perfiltermico.cpp
Proyecto3/code/include/bits/: MatrixArithmetic.hpp
Proyecto3/code/src/: CMakeLists.txt  FileParser.cpp  Proyecto3.cpp  main.cpp
(+71 files in other folders)
